Not even god knows what i changed

--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///run/media/martin/PornBank/ART/music/ardour projects/Albums/Hidden Legacy, file:///run/media/martin/PornBank/ART/Krita, file:///run/media/martin/PornBank/ART/music/ardour projects/ToBeMastered/nicosamplelok, file:///run/media/martin/PornBank/ART/music/ardour projects/Singles/Skeiv Skog, file:///run/media/martin/PornBank/ART/music/ardour projects/Singles/Skeiv Skog/tmp, file:///run/media/martin/PornBank/olive/hodeb youtube/Boneworks ep 1
-lastVisited=file:///run/media/martin/PornBank/olive/hodeb youtube/Boneworks ep 1
-qtVersion=5.13.2
-shortcuts=file:, file:///home/martin, file:///run/media/martin/PornBank/ART/music/ardour projects
+history=file:///home/zoo/Downloads, file:///home/zoo/python/AI/style-transfer, file:///home/zoo/books/trans, file:///home/zoo, file:///home/zoo/Downloads/wallpics
+lastVisited=file:///home/zoo
+qtVersion=5.15.2
+shortcuts=file:, file:///home/zoo, file:///home/zoo/Downloads
 sidebarWidth=90
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x62\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x8e\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0}\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x8e\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
