--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -95,6 +95,8 @@ bindsym $mod+space focus mode_toggle
 # focus the child container
 #bindsym $mod+d focus child
 
+bindsym $mod+Shift+b exec killall -9 blender
+
 set $workspace1  ""
 set $workspace2  ""
 set $workspace3  ""
@@ -218,6 +220,8 @@ for_window [class="python"]              floating enable
 for_window [class="evince"]              floating enable
 for_window [class="Thunar"]              floating enable
 for_window [class="godot"]               floating enable
+for_window [class="java"]                floating enable
+for_window [title="java"]                floating enable
 for_window [class="mpv"]                 floating enable
 for_window [title="QTTestApp"]           floating enable
 for_window [title="main.py"]             floating enable
