--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,5 +6,5 @@
 
 config_version: 2
 settings:
-  content.headers.user_agent:
-    accounts.google.com: Mozilla/5.0 (X11; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/77.0
+  content.geolocation:
+    https://www.europris.no: false
