too many changes

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -642,6 +642,7 @@ map ,pb cd /run/media/martin/PornBank/books
 
 map ,hh cd ~/
 map ,hd cd ~/Downloads
+map ,ha cd ~/art
 map ,hp cd ~/python
 map ,hb cd ~/books
 map ,hc cd ~/cpp
