--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -216,7 +216,9 @@ for_window [class="python3"]             floating enable
 for_window [class="godot3"]              floating enable
 for_window [class="python"]              floating enable
 for_window [class="evince"]              floating enable
+for_window [class="blender"]             floating enable
 for_window [class="Thunar"]              floating enable
+for_window [class="Thunar"]              resize set 1000 500
 for_window [class="godot"]               floating enable
 for_window [class="mpv"]                 floating enable
 for_window [title="QTTestApp"]           floating enable
@@ -237,7 +239,7 @@ exec python3 ~/makesexy.py off
 assign [class="Steam"]       → $workspace7
 assign [class="Lutris"]      → $workspace7
 assign [class="emacs"]       → $workspace3
-assign [class="qutebrowser"] → $workspace2
+# assign [class="qutebrowser"] → $workspace2
 assign [class="Ardour"]      → $workspace10
 assign [class="Zrythm"]      → $workspace10
 assign [class="Rack"]        → $workspace10
