--- a/termite/config
+++ b/termite/config
@@ -28,3 +28,5 @@
     color13        = #6c71c4
     color14        = #93a1a1
     color15        = #fdf6e3
+    color235       = rgba(39, 43, 51, 0.7)
+    color234       = rgba(39, 43, 51, 0.7)
