--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -12,13 +12,13 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/run/media/martin/PornBank/torrents",
+    "download-dir": "/home/zoey/hdd/home/martin/torrents",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/martin/Downloads",
+    "incomplete-dir": "/home/zoey/hdd/home/martin/torrents",
     "incomplete-dir-enabled": false,
     "lpd-enabled": false,
     "message-level": 2,
