actually switched to alacritty

--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -5,7 +5,7 @@ font pango:roboto mono medium 12
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec alacritty
 
 # start a Blender
 bindsym $mod+b exec blender
