randomize user agent everytime

--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -224,7 +224,7 @@ for_window [class="Thunar"]              resize set 1000 500
 for_window [class="godot"]               floating enable
 for_window [class="java"]                floating enable
 for_window [title="java"]                floating enable
-for_window [class="mpv"]                 floating enable
+# for_window [class="mpv"]                 floating enable
 for_window [title="QTTestApp"]           floating enable
 for_window [title="main.py"]             floating enable
 for_window [title="matplotlib"]          floating enable
