--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,5 +6,8 @@
 
 config_version: 2
 settings:
+  content.headers.user_agent:
+    global: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
+      Gecko) Chrome/90.0.4430.93 Safari/537.36
   content.javascript.enabled:
     https://www.soundcloud.com: true
